fix body position

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -15,7 +15,7 @@ input {
 body {
   width: 100%;
   /* overflow-x: hidden; */
-  position: relative;
+  /* position: relative; */
 }
 
 #container {
