--- a/src/assets/css/default.css
+++ b/src/assets/css/default.css
@@ -37,6 +37,18 @@ ul {
   list-style: none;
 }
 
+ol {
+  margin: 2px 0px 12px 1.5rem;
+  padding-left: 0px;
+  list-style-position: outside;
+}
+
+ul {
+  margin: 2px 0px 12px 1.5rem;
+  padding-left: 0px;
+  list-style-position: circle outside;
+}
+
 /* Reset forms and buttons */
 input,
 textarea,
