style writing and spelling udpates. also deleted and cleaned up a lot fo unused code. no more prettier problems. still eslint warnings though...

--- a/src/assets/css/typography.css
+++ b/src/assets/css/typography.css
@@ -21,6 +21,7 @@ body {
   color: #0f242c;
   -webkit-font-smoothing: antialiased;
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.004);
+  letter-spacing: -0.025rem;
 }
 g,
 text {
